[package]
name = "prql-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.8"
crossterm = "0.24.0"
env_logger = "0.9.0"
lo = "0.0.1"
log = "0.4.17"
promptly = "0.3.1"
rand = "0.8.5"
rustyline = "10.0.0"
rustyline-derive = "0.7.0"
sys = "0.0.0"
tui = "0.18.0"
unicode-width = "0.1.9"

